[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.4.0"
wgpu = "24.0.1"

[dependencies.windows]
version = "*"
features = [
    "Foundation_Numerics",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging_D2D",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_Animation",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]
